--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 /* header */
+/* navbar */
 .navbar-brand {
   padding: 9px 15px;
 }
@@ -15,6 +16,30 @@ body {
   display: inline-block;
   margin-top: 0.2rem;
 }
+.collapse.navbar-collapse {
+  font-weight: bolder;
+}
+#login {
+  border: 0.1rem solid #3A8AFF;
+  border-radius: 6%;
+  color: #3A8AFF;
+  padding: 0.5rem 1rem;
+  margin-top: 0.8rem;
+}
+#login:hover {
+  background-color: #3A8AFF;
+  color: white;
+}
+/* /navbar */
+/* jumbotron header  */
+.bg_header {
+  background-image: url(../img/bg-jumbo-header.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.header_box{
+  margin-top: 40rem;
+}
 /* WARNING @MEDIA QUERY */
 @media all and (min-width: 768px) and (max-width: 991px) {
   #collapsed_list1, #collapsed_list2 {
@@ -22,6 +47,7 @@ body {
   }
   #tablet_menu {
     display: block;
-    margin-left: 60rem;
+    position: absolute;
+    right: 0;
   }
 }
